<resources>
    <string name="app_name">What Do We Have</string>
    <string name="lbl_item">Item</string>
    <string name="lbl_et_item">Item Name</string>
    <string name="lbl_btn_ok">OK</string>
    <string name="lbl_quantity">Quantity</string>
    <string name="lbl_et_quanity">Quantity</string>
    <string name="lbl_extraction">Expiration</string>
    <string name="lbl_et_expiration">Expiration</string>
    <string name="lbl_btn_update">Update</string>
    <string name="text_empty_list">Click + to add items</string>
    <string name="lbl_btn_delete">Delete</string>
    <string name="lbl_btn_edit">Edit</string>
    <string name="text_empty_archive">All items have a stock</string>
</resources>
