<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.AddItemActivity"
        android:orientation="vertical"
        android:padding="10dp">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/lbl_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_itemName"
                android:layout_weight="1"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/et_itemName"
                android:layout_weight="1"
                android:autofillHints="@string/lbl_et_item"/>

    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/lbl_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_quantity"
                android:layout_weight="1"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/et_quantity"
                android:layout_weight="1"
                android:autofillHints="@string/lbl_et_quanity"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/lbl_extraction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_expiration"
                android:layout_weight="1"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:ems="10"
                android:id="@+id/et_expiration"
                android:layout_weight="1"
                android:autofillHints="@string/lbl_et_expiration"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_accept"
        android:text="@string/lbl_btn_ok"/>
</LinearLayout>