<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activities.UpdateItemActivity">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/lbl_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_update_itemName"
                android:layout_weight="1"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/et_update_itemName"
                android:layout_weight="1"
                android:autofillHints="@string/lbl_et_item"/>

    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/lbl_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_update_quantity"
                android:layout_weight="1"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/et_update_quantity"
                android:layout_weight="1"
                android:autofillHints="@string/lbl_et_quanity"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/lbl_extraction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_update_expiration"
                android:layout_weight="1"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:ems="10"
                android:id="@+id/et_update_expiration"
                android:layout_weight="1"
                android:autofillHints="@string/lbl_et_expiration"/>
    </LinearLayout>
    <Button
            android:text="@string/lbl_btn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_update_confirm"
    />

</LinearLayout>